[package]
name = "os"
version = "0.1.0"
authors = ["Lingfeng Zhu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# panic 时直接终⽌，因为我们没有实现堆栈展开的功能
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
algorithm = {path = "src/algorithm"}
bit_field = "0.10.0"
bitflags = "1.2.1"
riscv = {path = "src/riscv"}
buddy_system_allocator = {path = "src/buddy_system_allocator"}
#buddy_system_allocator = "0.3.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
#riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
spin = "0.5.2"
